# api_test_automation

./: .gitignore  README.md  pyproject.toml
src/: api_client.py  config.py
src/schemas/: createUser.json  newUser.json
tests/api/: test_users_api.py
