# pyproject.toml

[project]
name = "api-test-automation"
version = "0.1.0"
description = "API Test Automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "pytest>=9.0.1",
    "pytest-html>=4.1.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
    "tests",
]

[tool.pytest.ini_options]
#addopts = "-v -s"
addopts = "-s --html=report.html --self-contained-html"
testpaths = [
    "tests",
    "tests/api",
]
